startup模块注释